fixed home project and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,8 @@ img {
 
 @media (min-width: 568px) {
   main {
-    margin-left: 32px;
-    margin-right: 32px;
-    margin-bottom: 6.0em;
-  }
-}
-
-@media (min-width: 768px) {
-  main {
-    margin-bottom: 8.0em;
+    margin-left: 36px;
+    margin-right: 36px;
   }
 }
 
@@ -54,7 +47,7 @@ img {
 }
 
 /*=============================== Typography ===============================*/
-h1, h2, h3, h4, h5, p, a, button, li, .label, input, textarea, label, figcaption {
+h1, h2, h3, h4, h5, p, a, button, li, .label, input, textarea, label, figcaption, .stats-h {
   line-height: 1.4;
 }
 
@@ -63,7 +56,7 @@ h1, h3, h4, h5, h6, .label_d, .label_t, label, .quote, .bold {
 }
 
 /* ============= headings and paragraphs ============= */
-h1 {
+h1, .stats-h {
   font-size: 3.2rem;
 }
 
@@ -436,8 +429,8 @@ nav {
 
 @media (min-width: 568px) {
   nav {
-    margin-left: 32px;
-    margin-right: 32px;
+    margin-left: 36px;
+    margin-right: 36px;
   }
 
   .burger {
@@ -514,8 +507,8 @@ nav {
 
 @media (min-width: 568px) {
   .footer-content {
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 36px;
+    padding-right: 36px;
   }
 }
 
@@ -591,7 +584,7 @@ nav {
 
 /* ==== Projects ==== */
 .projects {
-  margin-top: 6em;
+  margin-top: 8.8em;
 }
 
 .project_1, .project_1_CORE {
@@ -611,36 +604,49 @@ nav {
   margin-bottom: 2.3em;
 }
 
-@media (min-width: 768px) {
-
-  /* ==== Projects ==== */
-  .projects {
-    margin-top: 8.0em;
+@media (min-width: 568px) {
+  .p-container3 {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 16px;
+    margin-top: 2.4em;
   }
 
-  .project_1 {
-    display: flex;
-    padding: 7.1186% 0px 3.3898% 8.474%;
-    margin-top: 3.6em;
+  .p-container3  {
+      display: flex;
   }
 
-  .p-container {
-    display: flex;
-    align-items: center;
-    order: 2;
-    width: 100%;
-    margin-left: auto;
+  .p-container3 button {
+    margin-top: 0px;
   }
 
-  .p-container2 {
-    width: 23.8135%;
-    margin-right: 11%;
+  .secondary {
+    margin-left: 16px;
   }
+}
 
-  .p-container2 button {
-    display: block;
-    width: 180px;
-  }
+
+@media (min-width: 1024px){
+
+    /* ==== Projects ==== */
+     .project_1 {
+     display: flex;
+     padding: 7.1186% 0px 3.3898% 8.474%;
+     margin-top: 3.6em;
+    }
+
+    .p-container {
+     display: flex;
+     align-items: center;
+     order: 2;
+     width: 100%;
+     margin-left: auto;
+    }
+
+    .p-container2 {
+     width: 40%;
+     margin-right: 10%;
+    }
 }
 
 @media (min-width: 1152px) {
@@ -671,13 +677,10 @@ nav {
   }
 
   /* ==== Projects ==== */
-  .projects {
-    margin-top: 10.8em;
-  }
 
-  .p-container2 button {
-    display: block;
-    width: 180px;
+  .p-container2 {
+   width: 56%;
+   margin-right: 10%;
   }
 }
 
@@ -702,23 +705,23 @@ nav {
 /*--- Words ---*/
 /* about & case studies */
 .c-section-1 {
-  margin-top: 4em;
+  margin-top: 4.8em;
 }
 
 .first-r{
   margin-top: 3.2em;
 }
 
-.section_2, .section_1 {
+.section_1, .section_2 {
+  margin-top: 4.0em;
+}
+
+ .first {
   margin-top: 3.2em;
 }
 
-.section_3, .section_3-grid, .first {
-  margin-top: 2.4em;
-}
-/*
-.section_r {
-  margin-top: 1.6em; */
+.section_3, .section_3-grid{
+    margin-top: 2.4em;
 }
 
 .section_4 {
@@ -891,13 +894,32 @@ nav {
 }
 
 .CORE-quote {
-  margin-top: 0.88em;
+  margin-top: 1.33em;
   color: #353535;
   font-weight: 700;
 }
 
 .inside-p {
-  margin-top: 0.941em;
+  margin-top: 1.411em;
+}
+
+.stats {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-auto-rows: repeat(2,1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 16px;
+  margin-top: 2.4em;
+}
+
+.stats-p {
+  margin-top: 0.235em;
+  text-align: center;
+}
+
+.stats-h {
+  display: block;
+  text-align: center;
 }
 
 @media (min-width: 568px) {
@@ -942,7 +964,7 @@ nav {
     grid-column: 2/8;
   }
 
-  .first, .section_2, .summary_list {
+  .first, .section_2, .summary_list, .first-r {
     grid-column: 2/8;
   }
 
@@ -1109,7 +1131,7 @@ nav {
 }
 
 .inside_pic {
-  margin-top: 1.6em;
+  margin-top: 2.4em;
 }
 
 @media (min-width: 1152px) {
